# dbtmon

./: README.md  pyproject.toml
src/dbtmon/: __init__.py  __main__.py  config.py  dbtmon.py  dbtmon_beta.py  monitor.py
